--- a/scripts/landcover_classification/landcover_classification.ipynb
+++ b/scripts/landcover_classification/landcover_classification.ipynb
@@ -2231,7 +2231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2249,5 +2249,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
