super resolution preparation

--- a/scripts/flood-map-collection-sentinel-1/flood-map-collection-sentinel-1.ipynb
+++ b/scripts/flood-map-collection-sentinel-1/flood-map-collection-sentinel-1.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
     "\n",
     "# Plot it\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(water, cmap='Blues')"
+    "plt.imshow(water, cmap='Blues')https://alumni.ugm.ac.id/ugmcareer/"
    ]
   },
   {
