--- a/notebook/flood_sumatera_nov_2025/notebook.ipynb
+++ b/notebook/flood_sumatera_nov_2025/notebook.ipynb
@@ -83,9 +83,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24704\\4188031294.py:30: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24704\\4114575312.py:30: RuntimeWarning: invalid value encountered in divide\n",
       "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24704\\4188031294.py:37: RuntimeWarning: invalid value encountered in cast\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24704\\4114575312.py:37: RuntimeWarning: invalid value encountered in cast\n",
       "  ).astype(\"uint8\")\n"
      ]
     }
@@ -163,7 +163,7 @@
     "    )\n",
     "    fig.tight_layout()\n",
     "\n",
-    "    plt.close(fig)"
+    "    plt.show(fig)"
    ]
   },
   {
