run for every roi

--- a/notebook/flood_sumatera_nov_2025/notebook.ipynb
+++ b/notebook/flood_sumatera_nov_2025/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "88beb167",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "9d27f5f7",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "0f969873",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "455f79f0",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "19  MULTIPOLYGON (((99.68947 -0.37837, 99.68947 -0...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -324,21 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a9d899ec",
+   "execution_count": 29,
+   "id": "855d590d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to generate flood map\n",
-    "def generate_flood_map(df_provinsi: gpd.GeoDataFrame, y: int, period_info: list[dict]):\n",
-    "    roi_select = df_provinsi.iloc[y : y + 1]\n",
+    "def generate_flood(y, fig):\n",
+    "    roi_select = df_roi.iloc[y : y + 1]\n",
     "    location = roi_select.iloc[0][\"name\"]\n",
     "    province = roi_select.iloc[0][\"provinsi\"]\n",
+    "\n",
+    "    # get provinsi info\n",
+    "    data_provinsi = [info for info in data_dict if info[\"provinsi\"] == province][0]\n",
+    "    period_info = data_provinsi[\"period\"]\n",
+    "\n",
     "    print(f\"Processing {location}\")\n",
     "    bbox = tuple(roi_select.total_bounds)\n",
     "    min_x, min_y, max_x, max_y = bbox\n",
     "    layer_extent = (min_x, max_x, min_y, max_y)\n",
-    "    fig = plt.figure(figsize=(15, 5))\n",
     "\n",
     "    # define ideal shape\n",
     "    resolution = 30\n",
@@ -371,9 +374,13 @@
     "            ).astype(\"uint8\")\n",
     "\n",
     "            # plot sentinel-1 image\n",
-    "            ax2 = fig.add_subplot(1, 3, x + 1)\n",
-    "            ax2.set_title(f\"Sentinel-1 {location}, {province}\\n{name} ({date})\")\n",
-    "            ax2.imshow(composite_s1, extent=layer_extent)\n",
+    "            ax = fig.add_subplot(\n",
+    "                len(df_roi),\n",
+    "                3,\n",
+    "                y * 3 + x + 1,\n",
+    "            )\n",
+    "            ax.set_title(f\"{location}, {province} ({date})\")\n",
+    "            ax.imshow(composite_s1, extent=layer_extent)\n",
     "\n",
     "            # generate water mask\n",
     "            water = (vv < 1000) * (vh < 500) * 1\n",
@@ -395,21 +402,27 @@
     "    flood_map[flood_map == 0] = np.nan\n",
     "\n",
     "    # Plot flood map\n",
-    "    ax3 = fig.add_subplot(1, 3, 3)\n",
+    "    ax3 = fig.add_subplot(\n",
+    "        len(df_roi),\n",
+    "        3,\n",
+    "        y * 3 + 3,\n",
+    "    )\n",
     "    ax3.set_title(\n",
     "        f\"Flood {location}, {province}: {(f'{flood_area:,}').replace(',', ' ')} Ha\"\n",
     "    )\n",
     "    ax3.imshow(\n",
-    "        flood_map, extent=layer_extent, cmap=\"Blues\", zorder=9999, vmin=0, vmax=2\n",
+    "        flood_map,\n",
+    "        extent=layer_extent,\n",
+    "        cmap=\"Blues\",\n",
+    "        zorder=9999,\n",
+    "        vmin=0,\n",
+    "        vmax=2,\n",
     "    )\n",
     "    add_basemap(\n",
     "        ax=ax3,\n",
     "        crs=\"EPSG:4326\",\n",
     "        source=\"http://mt0.google.com/vt/lyrs=y&hl=en&x={x}&y={y}&z={z}\",\n",
-    "    )\n",
-    "    fig.tight_layout()\n",
-    "\n",
-    "    plt.show(fig)"
+    "    )"
    ]
   },
   {
@@ -422,8 +435,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing Padang Tiji\n",
+      "Processing Sigli\n",
+      "Processing Lhokseumawe\n",
+      "Processing Meulaboh\n",
+      "Processing Darul Makmur\n",
+      "Processing Aceh Selatan\n",
+      "Processing Aceh Singkil\n",
+      "Processing Rundeng\n",
+      "Processing Pante Beudari\n",
+      "Processing Pante Peureulak\n",
       "Processing Kuala Simpang\n",
-      "Processing Tanjung Pura\n",
+      "Processing Pandan\n",
+      "Processing Batangtoru\n",
+      "Processing Singkuang\n",
+      "Processing Mandailing Natal\n",
+      "Processing Tapanuli Selatan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:36: RuntimeWarning: invalid value encountered in divide\n",
+      "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:43: RuntimeWarning: invalid value encountered in cast\n",
+      "  ).astype(\"uint8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Tanjung Tiram\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:36: RuntimeWarning: invalid value encountered in divide\n",
+      "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:43: RuntimeWarning: invalid value encountered in cast\n",
+      "  ).astype(\"uint8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Tanjung Pura\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:36: RuntimeWarning: invalid value encountered in divide\n",
+      "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:43: RuntimeWarning: invalid value encountered in cast\n",
+      "  ).astype(\"uint8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Pasaman Barat\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:36: RuntimeWarning: invalid value encountered in divide\n",
+      "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:43: RuntimeWarning: invalid value encountered in cast\n",
+      "  ).astype(\"uint8\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processing Agam\n"
      ]
     },
@@ -431,36 +525,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_23292\\4269153082.py:33: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:36: RuntimeWarning: invalid value encountered in divide\n",
       "  rdi = (vv / 1e4 - vh / 1e4) / (vv / 1e4 + vh / 1e4)\n",
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_23292\\4269153082.py:40: RuntimeWarning: invalid value encountered in cast\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_27080\\4061147846.py:43: RuntimeWarning: invalid value encountered in cast\n",
       "  ).astype(\"uint8\")\n"
      ]
     }
    ],
    "source": [
-    "# run it in pararell\n",
-    "with ThreadPoolExecutor(4) as executor:\n",
+    "fig = plt.figure(figsize=(15, 5 * len(df_roi)))\n",
+    "\n",
+    "with ThreadPoolExecutor(16) as executor:\n",
     "    jobs = []\n",
     "\n",
     "    # selected_roi\n",
-    "    for p in range(len(data_dict)):\n",
-    "        data_info = data_dict[p]\n",
-    "        period_info = data_info[\"period\"]\n",
-    "        provinsi = data_info[\"provinsi\"]\n",
-    "        df_provinsi = df_roi[df_roi[\"provinsi\"] == provinsi]\n",
+    "    for y in range(len(df_roi)):\n",
+    "        jobs.append(executor.submit(generate_flood, y, fig))\n",
     "\n",
-    "        for y in range(len(df_provinsi) - 1, len(df_provinsi)):\n",
-    "            jobs.append(\n",
-    "                executor.submit(generate_flood_map, df_provinsi, y, period_info)\n",
-    "            )\n",
-    "\n",
-    "    # run the jobs\n",
     "    for job in jobs:\n",
     "        try:\n",
     "            job.result()\n",
     "        except Exception as e:\n",
-    "            print(f\"Error: {e}\")"
+    "            print(f\"Error: {e}\")\n",
+    "\n",
+    "plt.show(fig)"
    ]
   }
  ],
